<resources>
    <string name="app_name">CricutTest - Brian Mielke</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forecast_detail">ForecastDetailActivity</string>
    <string name="high_label">High</string>
    <string name="low_label">Low</string>

    <string name="string_string_format">%1$s %2$s</string>

    <string name="background_description">background image</string>
    <string name="back_description">back</string>
    <string name="weather_icon_description">weather icon</string>
    <string name="upbutton_description">up button</string>

    <string name="back">back</string>
    <string name="label">Label</string>
    <string name="forecast">Forecast</string>
    <string name="placeholder">placeholder</string>
    <!--
    <yahoo-weather-codes>
        <code number="0" description="tornado"/>
        <code number="1" description="tropical storm"/>
        <code number="2" description="hurricane"/>
        <code number="3" description="severe thunderstorms"/>
        <code number="4" description="thunderstorms"/>
        <code number="5" description="mixed rain and snow"/>
        <code number="6" description="mixed rain and sleet"/>
        <code number="7" description="mixed snow and sleet"/>
        <code number="8" description="freezing drizzle"/>
        <code number="9" description="drizzle"/>
        <code number="10" description="freezing rain"/>
        <code number="11" description="showers"/>
        <code number="12" description="showers"/>
        <code number="13" description="snow flurries"/>
        <code number="14" description="light snow showers"/>
        <code number="15" description="blowing snow"/>
        <code number="16" description="snow"/>
        <code number="17" description="hail"/>
        <code number="18" description="sleet"/>
        <code number="19" description="dust"/>
        <code number="20" description="foggy"/>
        <code number="21" description="haze"/>
        <code number="22" description="smoky"/>
        <code number="23" description="blustery"/>
        <code number="24" description="windy"/>
        <code number="25" description="cold"/>
        <code number="26" description="cloudy"/>
        <code number="27" description="mostly cloudy (night)"/>
        <code number="28" description="mostly cloudy (day)"/>
        <code number="29" description="partly cloudy (night)"/>
        <code number="30" description="partly cloudy (day)"/>
        <code number="31" description="clear (night)"/>
        <code number="32" description="sunny"/>
        <code number="33" description="fair (night)"/>
        <code number="34" description="fair (day)"/>
        <code number="35" description="mixed rain and hail"/>
        <code number="36" description="hot"/>
        <code number="37" description="isolated thunderstorms"/>
        <code number="38" description="scattered thunderstorms"/>
        <code number="39" description="scattered thunderstorms"/>
        <code number="40" description="scattered showers"/>
        <code number="41" description="heavy snow"/>
        <code number="42" description="scattered snow showers"/>
        <code number="43" description="heavy snow"/>
        <code number="44" description="partly cloudy"/>
        <code number="45" description="thundershowers"/>
        <code number="46" description="snow showers"/>
        <code number="47" description="isolated thundershowers"/>
        <code number="3200" description="not available"/>
    </yahoo-weather-codes>
    -->
</resources>
